Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42281

[4->5 reg] WindowBlocked and WindowUnblocked events not being delivered to eventFilter()

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.0 RC
    • 5.3.2
    • None
    • Linux 64-bit
    • 51af196ba098e38e3aa654031b237a948962d601

    Description

      The WindowBlocked and WindowUnblocked events are not being delivered to an event filter installed on a QMainWindow. All other events are being delivered. See attached test case. It will show a main window and a dialog. Close the dialog and the main window. In the console you will see debug output indicating the WindowBlocked event was delivered to event() of the QMainWindow but not to eventFilter()

      Attachments

        For Gerrit Dashboard: QTBUG-42281
        # Subject Branch Project Status CR V

        Activity

          People

            peppe Giuseppe D'Angelo
            kovid Kovid Goyal
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes